Fixed icon alignment for application repositories

--- a/src/App.css
+++ b/src/App.css
@@ -15,4 +15,5 @@
 
 .sub.header a .icon:only-child {
     margin-right: 0.25rem;
+    vertical-align: middle;
 }
